syntax = "proto3";
option java_package = "ru.pavkin.ihavemoney.proto";
option optimize_for = SPEED;

message PBCommandEnvelope {
	string aggregateId = 1;
	oneof command {
		PBReceiveIncome command1 = 2;
		PBSpend command2 = 3;
		PBCreateUser command3 = 4;
		PBConfirmEmail command4 = 5;
		PBLogIn command5 = 6;
		PBResendConfirmationEmail command6 = 7;
	}
}

message PBReceiveIncome {
	string amount = 1;
	string currency = 2;
	string category = 3;
	string comment = 15;
}

message PBSpend {
	string amount = 1;
	string currency = 2;
	string category = 3;
	string comment = 15;
}

message PBCreateUser {
	string password = 1;
	string displayName = 2;
}

message PBConfirmEmail {
	string confirmationCode = 1;
}

message PBLogIn {
	string password = 1;
}

message PBResendConfirmationEmail {}
